# Churn498Capstone

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/processed/features/: features_20260201_145906.parquet  metadata_20260201_142224.json  metadata_20260201_145906.json  target_20260201_142224.parquet
docs/: data_dictionary.md  setup_guide.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css
frontend/src/components/data-display/: AgentInsightCard.tsx
frontend/src/hooks/: useAccounts.ts  useAnalytics.ts  useDashboard.ts  useInterventions.ts  usePrescriptions.ts
notebooks/initial_EDA/: eda_accounts.ipynb  eda_content_catalog.ipynb  eda_payments.ipynb  eda_streaming_events.ipynb  eda_subscriptions.ipynb  eda_support_tickets.ipynb
scripts/: test_integration.py
sql/: schema.sql
sql/migrations/: 001_interventions.sql
src/agents/: __init__.py  config.py  prompts.py  state.py  tools.py  utils.py
src/agents/analysis/: __init__.py  analyzer.py  narratives.py
src/agents/early_warning/: __init__.py  alerts.py  detector.py
src/agents/intervention/: __init__.py  drafter.py  email_renderer.py  strategies.py
src/agents/pipelines/: __init__.py  ddp_nodes.py  ddp_pipeline.py
src/app/: __init__.py  agent_schemas.py  config.py  dependencies.py  main.py  schemas.py
src/app/fixtures/: __init__.py  demo_data.py
src/app/routers/: accounts.py  agents.py  analytics.py  dashboard.py  interventions.py  prescriptions.py
src/app/routes/: __init__.py  analytics.py  at_risk.py  dashboard.py  interventions.py  prescriptions.py
src/app/services/: __init__.py  account_service.py  agent_service.py  analytics_service.py  dashboard_service.py  intervention_service.py  prescription_service.py
src/data/: database.py  load.py
src/features/: __init__.py  build_features.py  config.py  export.py  pipeline.py  transformers.py  validation.py
src/models/: README.md  __init__.py  build_models.py  config.py  evaluate.py  monitoring.py  registry.py  score.py  train.py
tests/: conftest.py  test_agents_foundation.py  test_analysis_agent.py  test_app_agents.py  test_data.py  test_ddp_pipeline.py  test_early_warning.py  test_features.py  test_intervention_drafter.py  test_models.py
tests/test_app/: conftest.py  test_accounts.py  test_agents.py  test_analytics.py  test_dashboard.py  test_health.py  test_interventions.py  test_prescriptions.py  test_schemas.py
